feat: enhance transaction handling and user registration with improved error handling and API key authentication for n8n